<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="date">Date:</string>
    <string name="hello">Hello World, SchedulerActivity!</string>
    <string name="app_name">BSUIR Schedule</string>
    <string name="menu_item_day">Day</string>
    <string name="menu_item_week">Week</string>
    <string name="menu_item_month">Month</string>
    <string name="menu_item_refresh">Update</string>
    <string name="menu_item_preferences">Settings</string>
    <string name="menu_item_info_details">About Scheduler</string>
    <string name="note">Note</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="semester">Semester</string>
    <string name="semester_length">Semester length</string>
    <string name="semester_length_weeks">semesterlengthweeks</string>
    <string name="semester_start_day">semester_start_day</string>
    <string name="semester_start">First day</string>
    <string name="notifications_enabled">notifications_enabled</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_enabled_question">Enable notifications?</string>
    <string name="group_number">group_number</string>
    <string name="sub_group_number">sub_group_number</string>
    <string name="last_group_number">last_group_number</string>
    <string name="last_sub_group_number">last_sub_group_number</string>
    <string name="group">Group</string>
    <string name="preference_sub_group_list">preference_sub_group_list</string>
    <string name="subgroup">Subgroup</string>
    <string name="alarm_clock">Alarm clock</string>
    <string name="alarm_type">Type of alarm</string>
    <string name="alarm_before_lesson">Before lesson</string>
    <string name="alarm_time">Time</string>
    <string name="alarm_ringtone">Ringtone</string>
    <string name="alarm_volume">Volume</string>
    <string name="alarm_vibration">Vibration</string>
    <string name="weeks">" weeks"</string>
	<string name="welcome">Thank you for choosing our product!\nTo start using it you need to enter some data.</string>
	<string name="back">Back</string>
	<string name="next">Next</string>
	<string name="sorry">These data are unique for each group.\nThat\'s why, enter it by yourself, please.</string>
	<string name="start_work">To start work click "Next".</string>
	<string name="start_parsing">Downloading schedule</string>
	<string name="room">room: </string>
	<string name="teacher">Teacher:</string>
	<string name="time">Time: </string>
	<string name="day">day</string>
	<string name="Close">Close</string>
	<string name="alarm_toast">Next alarm:</string>
	<string name="notif_vibrate">notif_vibrate</string>
	<string name="notif_sound">notif_sound</string>
	<string name="notif_lights">notif_lights</string>
	<string name="notification_sound">Sound</string>
    <string name="notification_lights">Lights</string>
    <string name="crazy">This application distribute \"as is as\" and you use it on your own risk.\nWe are not responsible for breach your plans due to program errors</string>
    <string name="agree">Agree</string>
    <string name="key_alarm_clock">pref_alarm_clock</string>
    <string name="key_alarm_type">pref_alarm_type</string>
    <string name="key_alarm_before_lesson">pref_alarm_before_lesson</string>
    <string name="key_alarm_time">pref_alarm_time</string>
    <string name="key_alarm_ringtone">pref_alarm_ringtone</string>
    <string name="key_alarm_volume">pref_alarm_volume</string>
    <string name="key_alarm_vibration">pref_alarm_vibration</string>
    <string name="key_get_next_pairs_and_alarm">key_get_next_pairs_and_alarm</string>
    <string name="author_names">Alexei Vitenko, Vladislav Nikolaev, Vladislav Sokolenko</string>
    <string name="author_title">Authors</string>
    <string name="parser_exception_text">Error! Document structure was changed on the website</string>                                                                                     <string name="indian_code">Developers, developers, developser, developers, developers, developers...\nDevelopers! Developers! Developers! Developers! Developers! Developers! Developers! Developers!\nYes!\nClap-clap-clap.</string>
    <string name="group_exception_text">Set your group number in settings</string>
    <string name="internet_exception_text">Check internet connection</string>
    <string name="groupname_exception_text">No such group: </string>
    <string name="groupname_server_text">Smth strange happend on the server side</string>
    <string name="group_probably_not_exsist">or this group don\'t exsist: </string>
    <string name="sax_exception">XML not valid. It seems that document structure was changed on the website</string> 
    <string name="magic">Do you like... magic?</string>
    <string name="labs">Labs</string>
</resources>