<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="vertical"
	    android:padding="5dp" >

	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sorry"
	        android:focusable="true"
	        ><requestFocus /></TextView>
	    <LinearLayout
		    android:layout_marginTop="10dp" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/semester_length" 
		        />
		    <EditText 
		        android:id="@+id/config_1_weeks"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:maxLength="2"
		        android:inputType="number"/>
		</LinearLayout>
		<LinearLayout
		    android:layout_marginTop="10dp" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/semester_start" 
		        />
		    <DatePicker 
		        android:id="@+id/config_1_date"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"/>
		</LinearLayout>
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/start_work"/>
	</LinearLayout>
</ScrollView>