<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" 
	    android:padding="5dp"
	    android:gravity="center_vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/welcome"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	        ><requestFocus /></TextView>
		<LinearLayout
		    android:layout_marginTop="10dp" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/group" 
		        />
		    <EditText 
		        android:id="@+id/config_0_group"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:maxLength="6"
		        android:inputType="number"/>
		</LinearLayout>
		<LinearLayout
		    android:layout_marginTop="10dp" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/subgroup" 
		        />
		    <Spinner 
		        android:id="@+id/config_0_spinner"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:entries="@array/preferences_sub_group_entries"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>